# MarketingAI

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  gunicorn_conf.py  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_funnels_commerce.py
backend/app/: __init__.py  main.py  realtime.py
backend/app/ai/: __init__.py  chroma_store.py  openai_client.py  prompting.py  rag.py
backend/app/analytics/: __init__.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  logging.py  rate_limit.py  security.py
backend/app/database/: base.py  init_db.py  session.py
backend/app/middleware/: cors.py  security.py
backend/app/models/: __init__.py  entities.py  enums.py
backend/app/moderation/: __init__.py  engine.py
backend/app/queues/: __init__.py  enqueue.py  worker.py
backend/app/schemas/: ai.py  auth.py  crm.py  dashboard.py  social.py
backend/app/services/: action_engine.py  campaign_matcher.py  content_generator.py  event_processor.py  funnel_runner.py  lead_scoring.py  meta_oauth.py  meta_sync.py  normalization.py  phone_utils.py  provider_factory.py  retention_jobs.py  wellness_segments.py
backend/app/services/providers/: __init__.py  (+3 more)
backend/app/webhooks/: meta.py  routes.py  verify.py
backend/tests/unit/: test_ai_fallback.py  test_cors_origins.py  test_database_url.py  test_meta_signature.py  test_moderation.py  test_normalization.py  test_security.py
(+77 files in other folders)
