[project]
name = "rootellect-instagram-ai-automation-backend"
version = "0.1.0"
description = "FastAPI backend for Rootellect AI Instagram automation."
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.14.0",
  "arq>=0.26.3",
  "argon2-cffi>=23.1.0",
  "asyncpg>=0.30.0",
  "chromadb>=0.6.3",
  "cryptography>=44.0.0",
  "email-validator>=2.2.0",
  "fastapi[standard]>=0.115.6",
  "gunicorn>=23.0.0",
  "httpx>=0.28.1",
  "openai>=2.36.0",
  "pydantic-settings>=2.7.0",
  "pyjwt>=2.10.1",
  "python-multipart>=0.0.20",
  "redis>=5.2.1",
  "sqlalchemy[asyncio]>=2.0.36",
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4",
  "mypy>=1.14.0"
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
line-length = 130
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
